css/css-style.css
/* ... */
.contact-two .contact-title {
  font-size: 24px;
  font-weight: 600;
  color: #121212; }
.contact-two .text {
  font-size: 16px;
  line-height: 24px;
  margin-top: 16px;
  color: #6c6c6c; }
.contact-two .contact-info {
  margin-top: 40px; }
  .contact-two .contact-info li {
    color: #6c6c6c;
    margin-top: 8px;
    font-size: 16px; }
    .contact-two .contact-info li i {
      margin-right: 5px;
      color: #121212; }

.contact-map .gmap_canvas iframe {
  width: 100%;
  height: 400px; }

.form-group {
  margin-bottom: 0; }

.form-input label {
  font-size: 12px;
  line-height: 18px;
  color: #6c6c6c;
  margin-bottom: 8px;
  display: inline-block; }
.form-input .input-items {
  position: relative; }
  .form-input .input-items input, .form-input .input-items textarea {
    width: 100%;
    height: 44px;
    border: 2px solid #a4a4a4;
    padding-left: 44px;
    padding-right: 12px;
    position: relative;
    font-size: 16px;
    color: #6c6c6c; }
    .form-input .input-items input:focus, .form-input .input-items textarea:focus {
      border-color: #38ccf9; }
    .form-input .input-items input::placeholder, .form-input .input-items textarea::placeholder {
      color: #6c6c6c;
      opacity: 1; }
    .form-input .input-items input::-moz-placeholder, .form-input .input-items textarea::-moz-placeholder {
      color: #6c6c6c;
      opacity: 1; }
    .form-input .input-items input::-moz-placeholder, .form-input .input-items textarea::-moz-placeholder {
      color: #6c6c6c;
      opacity: 1; }
    .form-input .input-items input::-webkit-input-placeholder, .form-input .input-items textarea::-webkit-input-placeholder {
      color: #6c6c6c;
      opacity: 1; }
  .form-input .input-items textarea {
    padding-top: 8px;
    height: 130px;
    resize: none; }
  .form-input .input-items i {
    position: absolute;
    top: 11px;
    left: 13px;
    font-size: 20px;
    z-index: 9;
    color: #6c6c6c; }

/*===========================
    22.HEADER css
===========================*/
.footer-area .footer-widget {
  padding-top: 90px;
  padding-bottom: 120px; }
  @media only screen and (min-width: 768px) and (max-width: 991px) {
    .footer-area .footer-widget {
      padding-top: 70px;
      padding-bottom: 100px; } }
  @media (max-width: 767px) {
    .footer-area .footer-widget {
      padding-top: 50px;
      padding-bottom: 80px; } }
  .footer-area .footer-widget .footer-title {
    font-size: 14px;
    font-weight: 700;
    line-height: 18px;
    color: #6c6c6c; }
  .footer-area .footer-widget .footer-link {
    margin-top: 32px; }
    .footer-area .footer-widget .footer-link ul {
      margin-top: 8px; }
      .footer-area .footer-widget .footer-link ul li a {
        font-size: 16px;
        line-height: 24px;
        color: #121212;
        margin-top: 16px;
        font-weight: 500;
        -webkit-transition: all 0.3s ease-out 0s;
        -moz-transition: all 0.3s ease-out 0s;
        -ms-transition: all 0.3s ease-out 0s;
        -o-transition: all 0.3s ease-out 0s;
        transition: all 0.3s ease-out 0s; }
        .footer-area .footer-widget .footer-link ul li a:hover {
          color: #38ccf9; }
.footer-area .footer-copyright {
  padding-top: 13px;
  padding-bottom: 23px; }
  .footer-area .footer-copyright .copyright .text {
    color: #121212; }
  .footer-area .footer-copyright .social li {
    display: inline-block;
    margin-right: 10px; }
    .footer-area .footer-copyright .social li:last-child {
      margin-right: 0; }
    .footer-area .footer-copyright .social li a {
      font-size: 24px;
      color: #6c6c6c;
      -webkit-transition: all 0.3s ease-out 0s;
      -moz-transition: all 0.3s ease-out 0s;
      -ms-transition: all 0.3s ease-out 0s;
      -o-transition: all 0.3s ease-out 0s;
      transition: all 0.3s ease-out 0s; }
      .footer-area .footer-copyright .social li a:hover {
        color: #38ccf9; }
.footer-area.footer-dark {
  background-color: #121212; }
  .footer-area.footer-dark .footer-widget .footer-title {
    color: #fff; }
  .footer-area.footer-dark .footer-widget .footer-link ul li a {
    color: #fff; }
    .footer-area.footer-dark .footer-widget .footer-link ul li a:hover {
      color: #38ccf9; }
  .footer-area.footer-dark .footer-copyright .copyright .text {
    color: #fff; }
  .footer-area.footer-dark .footer-copyright .social li a {
    color: #fff; }
    .footer-area.footer-dark .footer-copyright .social li a:hover {
      color: #38ccf9; }

/*===== BACK TO TOP =====*/
.back-to-top {
  font-size: 20px;
  color: #121212;
  position: fixed;
  right: 20px;
  bottom: 20px;
  width: 45px;
  height: 45px;
  line-height: 45px;
  border-radius: 50%;
  background-color: #38ccf9;
  text-align: center;
  z-index: 99;
  -webkit-transition: all 0.3s ease-out 0s;
  -moz-transition: all 0.3s ease-out 0s;
  -ms-transition: all 0.3s ease-out 0s;
  -o-transition: all 0.3s ease-out 0s;
  transition: all 0.3s ease-out 0s;
  display: none; }
  .back-to-top:hover {
    color: #121212;
    background-color: #38ccf9; }

.teamlist {
  margin-top: 2em;
  margin-bottom: 2em;
}
.teamlist li {
  display: flex;
}
.teamlist .name {
  font-size: 1.1em;
  flex-grow: 1;
}
.teamlist .description {
  color: grey;
  font-weight: lighter;
  font-size: 0.8em;
}

/*# sourceMappingURL=style.css.map */

